# home-automation-services

./: .gitmodules  Cargo.toml  Dockerfile  config.yaml
.cargo/: config.toml
configuration/: Cargo.toml
configuration/src/: lib.rs
messages/: Cargo.toml
messages/home_automation_msgs/: package.xml
messages/home_automation_msgs/msg/: SetOnState.msg
messages/src/: lib.rs
nanoleaf-aurora/: Cargo.toml
nanoleaf-aurora/src/: lib.rs  main.rs  utils.rs
